# fundAI

./: .gitignore  CodeOfConductUsers.md  README.md  architecture.md  codeofconduct.md  ideas.md
EdTech Apps/MoneyWise Academy/: .gitignore  README.md  config.example  pyproject.toml  ticket.md
EdTech Apps/MoneyWise Academy/src/: main.py
EdTech Apps/MoneyWise Academy/src/config/: settings.py
EdTech Apps/MoneyWise Academy/src/data/database/: models.py  operations.py
EdTech Apps/MoneyWise Academy/src/utils/: hardware_identifier.py  network_monitor.py
Guidance Notes/: weeklycheckins.md
Prelearning/: Introduction.md
fundAIHub/: .gitignore  README.md  fundavault_debug_checklist.md  go.mod  go.sum  index.html  nextsteps.md  productDesc.md
fundaVault/: README.md  app.db  backend.md  frontend.md  modal_app.py  requirements.txt  update_password.py
fundai-edtech-store-fe/: .gitignore  README.md  auth.md  backend.md  download_debug_checklist.md  error.md  fundaVault.md  index.html  jest.config.js  package-lock.json  package.json  password_test.py  (+4 more)
qaextractor/extract/: pyproject.toml
qaextractor/extract/src/meta/: cleanup.py  extract_cover.py  update.py  update_mongo.py
qaextractor/extract/src/qaextractor/: __init__.py  daggerStructure.md  daggerTesting.md  main.py
qaextractor/extract/src/qaextractor/models/: extracted_question.py
qaextractor/extract/src/qaextractor/scripts/orchestration/: answer_pdf_extractor.py  constants.py  create_document.py  extraction_log.txt  extraction_pipeline.py  find_matching_answer.py  find_unprocessed.py  insert_answers.py  insert_questions.py  llm_extraction.py  mark_processed.py  pdf_extractor.py  process_level.py  remove_duplicates.py  update_extraction.py
qaextractor/extract/src/qaextractor/scripts/tools/: pdf_tools.py
qaextractor/extract/src/qaextractor/tests/: test_extraction_pipeline.py
qaextractor/extract/src/qaextractor/tools/: pdf_tools_module.py
(+654 files in other folders)
