[tool.poetry]
name = "moneywise-academy"
version = "0.1.0"
description = "Financial literacy AI tutor for ages 12-18"
authors = ["fundAI <team@fundai.co>"]
readme = "README.md"
license = "Proprietary"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
PySide6 = ">=6.4.0"
llama-cpp-python = ">=0.3.9"
groq = ">=0.5.0"
SQLAlchemy = ">=2.0.0"
firebase-admin = ">=6.1.0"
pymongo = ">=4.3.3"
python-dotenv = ">=0.21.0"
requests = ">=2.28.2"
Pillow = ">=10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-qt = "*"
ruff = ">=0.1.0"
PyInstaller = ">=5.7.0"

[tool.poetry.scripts]
moneywise = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Target Python 3.8+
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by formatter)
]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

