[project]
name = "qaextractor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["dagger-io", "pymongo"]

[project.entry-points."dagger.mod"]
main_object = 'qaextractor:Qaextractor'

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"
